package ar.edu.utn.frba.dds;

/**
 * Tipos de estados de un solicitudDeEliminacion.
 */
public enum Estado {
  ACEPTADA,
  RECHAZADA,
  PENDIENTE
}
