package ar.edu.utn.frba.dds.domain.criterio;

/**
 * Representa la categoria de un Hecho. Sirve para filtrar en una fuente de datos.
 */
public enum Categoria {
  INCENDIO_FORESTAL,
  HOMICIDOS_DOLOSOS,
  ACCIDENTE_VIAL
}