@startuml

class   Coleccion {
    -fuente : Fuente
    -hechos : List<Hecho>
    -titulo : String
    -descripcion : String
    -criterio : Criterio
    +cargarHechos()
    +navegar()
    +navegarConFiltro(Criterio criterio9
    +mostrarHecho(Hecho hecho)
}

class  Hecho {
    -titulo : String
    -descripcion : String
    -categoria : Categoria
    -latitud : String
    -longitud : String
    -fechaHecho : LocalDate
    -fechaCarga : LocalDate
}

abstract class   Fuente {
    +getHechos() : List<Hecho>
    #openFile() : FileReader
    #guardarHechos(FileReader file) : List<Hecho>
    #closeFile(FileReader file)
}

class FuenteCsv{
    -path : String
    +agregarHechoNuevo(Hecho hecho, List<Hecho> hechos9
    +FileReader openFile()
    +List<Hecho> guardarHechos(FileReader file)
    +closeFile(FileReader file)
}

enum    Categoria {
    ACCIDENTE_VIAL,
    INCENDIO_FORESTAL,
    HOMICIDOS_DOLOSOS
}

interface Criterio {
    +cumpleCriterio(Hecho hecho) : Boolean
}

class CriterioPorCategoriaYLugar {
    -categoria : Categoria
    -latitud : String
    -longitud : String
    +cumpleCriterio(Hecho hecho) : Boolean
}

class CriterioPorCategoria {
    -categoria : Categoria
    +cumpleCriterio(Hecho hecho) : Boolean
}

class CriterioPorFecha {
    -fecha : LocalDate
    +cumpleCriterio(Hecho hecho) : Boolean
}

class SolicitudDeEliminacion {
    -estado : Estado
    -tituloHecho : String
    -motivo : String
    +aceptar()
    +rechazar()
    +buscarHecho()
}

enum Estado {
    RECHAZADA,
    ACEPTADA,
    PENDIENTE
}

Coleccion --> Criterio
Coleccion --> Hecho
Coleccion --> Fuente
Hecho --> Categoria
Criterio <|.. CriterioPorCategoriaYLugar
Criterio <|.. CriterioPorCategoria
Criterio <|.. CriterioPorFecha
Fuente <|-- FuenteCsv
Fuente --> SolicitudDeEliminacion
SolicitudDeEliminacion --> Estado
@enduml
